--- a/index.html
+++ b/index.html
@@ -1,21 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-        <img src="img/avatar-.png" alt="avatar da Fernanda" srcset="" />
-            <p>Eu sou o Otavio</p>
-            <h1>Eu ensino Programação</h1>
-            <p>
-              Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional
-              para estudantes do Ensino Fundamental e Médio. Ensino sobre pensamento
-              computacional usando HTML, CSS e JavaScript. Veja os projetos que já
-              desenvolvi!
-            </p>
-            <p>Minhas habilidades</p>
-          
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
+    <title>Nosso Portfólio</title>
+</head>
+
+<body>
+    <header class="container text-center">
+        <img src="imagens/atumgigante.jpg" alt="logo da página" class="rounded-circle" width="150" height="150">
+        <p class="lead">Eu sou o Otavio</p>
+        <h1>Peixes magnificos e monstruosos </h1>
+        <p>Aqui vou apresentar peixes gigantes pescados por pescadores insanos e diferenciados </p>
+        <h4>Peixes monstros</h4>
+        <div>
+            <p class="badge text-bg-secondary">Pesca</p>
+            <p class="badge text-bg-secondary">Captura</p>
+            <p class="badge text-bg-secondary">Briga</p>
+            <p class="badge text-bg-secondary">Vitoria</p>
+        </div>
+    </header>
+    <main class="container mt-5">
+        <h2>Nossas Aventuras</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/254b15b0-a7db-4882-9ce2-3eb5408ddb3d.webp" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Amigos desde sempre</h5>
+                        <p class="card-text">Apesar de ser o mais novo, o Recruta
+                            adotou o Chefe logo que chegou na família. Seu irmão mais velho sempre foi sinônimo
+                            de amizade, amor e confiança.</p>
+
+                        <button type="button" class="btn btn-secondary">Ver
+                            mais</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/download.jpeg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Passeios em família</h5>
+                        <p class="card-text">"Nossos AUmanos sempre priorizaram por
+                            momentos em família, fosse com uma brincadeira em casa ou um passeio no parque."</p>
+                        <button type="button" class="btn btn-secondary">Ver
+                            mais</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/maxresdefault.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">A velhice</h5>
+                        <p class="card-text">Assim como para as pessoas, a idade
+                            chega também para os animais. E não foi diferente com esses peludinhos, o Chefe teve
+                            momentos bem difíceis com várias enfermidades, mas o Recruta jamais o deixou
+                            sozinho... </p>
+                        <button type="button" class="btn btn-secondary">Ver
+                            mais</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="container">
+        <h3> Acompanhe um poquinho da nossa história</h3>
+        <div>
+            <a href="https://www.instagram.com/chefe.recruta/">Instagram</a>
+        </div>
+        <p class="my-5 text-center">© Copyright 2025. Produzido pela nossa AUmana</p>
+    </footer>
+</body>
+
 </html>
