--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </div>
     </header>
     <main class="container mt-5">
-        <h2>Nossas Aventuras</h2>
+        <h2>Pescarias<h2>
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="imagens/254b15b0-a7db-4882-9ce2-3eb5408ddb3d.webp" class="card-img-top">
+                    <img src="imagens/download.jpeg"card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Amigos desde sempre</h5>
                         <p class="card-text">Apesar de ser o mais novo, o Recruta
